# ultimate-cybersecurity-dataset

./: .gitattributes  .gitignore  AGENTS.md  CHECKPOINT_STRATEGY.md  DATASET_CARD.md  LICENSE_NOTES.md  Makefile  README.md  REPO_AUDIT.md  TESTING_HANDOFF.md  TRAINING_STATUS.md  pyproject.toml  requirements-cloud-qlora.txt  requirements.txt
config/: benchmark_heads.yml  datasets.yaml  label_mapping.yaml  qlora_cleaned_sft_qwen25_coder_7b.yml  qlora_cloud_qwen25_coder_32b.yml  qlora_local_qwen25_coder_7b.yml  qlora_production_qwen25_coder_32b.yml  sampling_plan.yaml  schema.yaml  sft_quality_pipeline.yml  taxonomy_20_categories.yaml
docs/: gold_benchmark.md  gold_unified_layer.md  label_taxonomy.md  qwen32b_cloud_validation.md  schema_v1.md  silver_layer_report.md
examples/: run_gold_demo.sh
scripts/: 00_preflight_bronze_healthcheck.py  01_inventory_bronze.py  02_create_bronze_category_index.py  03_plan_silver_modules.py  04_cross_source_dedup_report.py  05_build_silver_manifest.py  __init__.py  build_gold_benchmark.py  build_gold_unified.py  cloud_qwen32b_validation.sh  download_nvd_cve.py  evaluate_benchmark.py  evaluate_qlora_adapters.py  prepare_sft_dataset.py  run_model_predictions.py  sync_run_artifacts.py  train_qlora.py
tests/: test_bronze_inventory.py  test_build_gold_benchmark.py  test_evaluate_benchmark.py  test_evaluate_qlora_adapters.py  test_gold_unified.py  test_ingest_structured_sources.py  test_label_mapping.py  test_prepare_sft_dataset.py  test_run_model_predictions.py  test_safety.py  test_schema.py  test_scrapers.py  test_splits.py  (+1 more)
(+115 files in other folders)
