[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ultimate-cybersecurity-dataset"
version = "0.2.0"
description = "Framework-first builder for a normalized mixed cybersecurity research dataset."
requires-python = ">=3.12"
dependencies = [
  "pandas>=2.2",
  "pyarrow>=15",
  "pydantic>=2.7",
  "PyYAML>=6.0",
  "ijson>=3.2",
  "tqdm>=4.66",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "nbformat>=5.9", "ruff>=0.5", "mypy>=1.10"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = [".", "src"]
